styles.css
body {
	font-family: Arial, sans-serif;
	text-align: center;
	background-image: url('icons/background.jpg');
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
	background-color: #ffdaf4;
	color: #6a0572;
	padding: 100px;
}

.container {
	max-width: 800px;
	margin: 0 auto;
	background: white;
	padding: 20px;
	border-radius: 15px;
	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
	text-align: left;
}

h1,
h2,
h3 {
	color: #d63384;
	text-align: center;
}

p {
	font-size: 18px;
}

.back-button {
	display: inline-block;
	margin-top: 20px;
	padding: 10px 20px;
	font-size: 18px;
	color: white;
	background-color: #d63384;
	border: none;
	border-radius: 8px;
	cursor: pointer;
	text-decoration: none;
}

.back-button:hover {
	background-color: #b0246d;
}

.join-button {
	display: inline-block;
	margin-top: 20px;
	padding: 10px 20px;
	font-size: 18px;
	color: white;
	background-color: #af5bd2;
	border: none;
	border-radius: 8px;
	cursor: pointer;
	text-decoration: none;
}

.join-button:hover {
	background-color: #6d3a83;
}

.role-icons img {
	width: 32px;
	height: 32px;
	margin-top: 10px;
}

